[workspace]
members = [".", "application-toys-macros"]

[package]
name = "application-toys"
version = "0.0.1"
edition = "2024"
rust-version = "1.85"
authors = ["Soumyo Deep Gupta <deep.main.ac@gmail.com>"]
description = "Lightweight application primitives for async Rust — typed event bus, async trait support, and more to come"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/d33p0st/application-toys"
homepage = "https://github.com/d33p0st/application-toys"
documentation = "https://docs.rs/application-toys"
keywords = ["async", "event", "broadcast", "application", "tokio"]
categories = ["asynchronous", "rust-patterns", "concurrency"]

[lib]
name = "toys"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.52.3", features = ["full"], optional = true }
application-toys-macros = { version = "0.0.1", optional = true }
anyhow = "1.0.102"

[features]
default = []
event = ["dep:tokio", "tokio/full", "dep:application-toys-macros", "application-toys-macros/asynchronous-traits"]
